--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "serve": "webpack-dev-server --mode=development",
     "build": "webpack -p"
   },
+  "engines":{
+    "node": "12.0.0",
+    "npm": "6.9.0"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
