--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack-dev-server --mode=development",
-    "build": "webpack -p"
+    "build": "webpack -p",
+    "start": "node index.js"
   },
   "engines": {
     "node": "12.0.0",
@@ -35,6 +36,7 @@
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "dotenv-webpack": "^1.7.0",
+    "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1"
